--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -6,18 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".home">
 
-    <TextView
-        android:id="@+id/home_heading"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayouth"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:padding="5dp"
-        android:paddingStart="20dp"
-        android:text="Home"
-        android:textSize="32dp"
-        android:textStyle="bold"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/home_heading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:padding="5dp"
+            android:text="Home"
+            android:textSize="32dp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/home_menu_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/menu_icon" />
+
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -28,7 +45,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_heading">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayouth">
 
         <LinearLayout
             android:layout_width="match_parent"
