--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -44,8 +44,10 @@
         android:background="@drawable/edit_text_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayouth">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayouth"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,10 +59,10 @@
                 android:id="@+id/home_new_posts_head"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="New Posts"
                 android:textSize="32sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,20 +73,20 @@
                     android:id="@+id/home_post_img"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:background="#d3eaf2"
                     android:layout_marginBottom="3dp"
                     android:layout_weight="1"
+                    android:background="#d3eaf2"
                     app:srcCompat="@drawable/bmslogo" />
 
                 <TextView
                     android:id="@+id/home_post_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="#d3eaf2"
                     android:layout_marginBottom="3dp"
                     android:layout_weight="3"
-                    android:textSize="24sp"
-                    android:text="Sourabh P H" />
+                    android:background="#d3eaf2"
+                    android:text="Sourabh P H"
+                    android:textSize="24sp" />
             </LinearLayout>
 
         </LinearLayout>
