--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -55,8 +55,10 @@
         android:id="@+id/profile_linkedin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:layout_marginTop="15dp"
+        android:text="LinkedIn"
+        android:background="#d3eaf2"
+        android:padding="3dp"
         app:layout_constraintEnd_toStartOf="@+id/profile_facebook"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +69,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:layout_marginTop="15dp"
+        android:text="Facebook"
+        android:background="#d3eaf2"
+        android:padding="3dp"
         app:layout_constraintEnd_toStartOf="@+id/profile_github"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/profile_linkedin"
@@ -79,8 +83,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:layout_marginTop="15dp"
+        android:text="Github"
+        android:background="#d3eaf2"
+        android:padding="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/profile_facebook"
