--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -119,12 +119,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <SearchView
+        <EditText
             android:id="@+id/dashboard_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@drawable/edit_text_border"/>
+            android:background="@drawable/edit_text_border"
+            android:textSize="24dp"
+            android:padding="5dp"
+            android:hint="Search"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
