--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:padding="5dp"
+            android:paddingStart="20dp"
             android:text="Dashboard"
             android:textSize="32dp"
             android:textStyle="bold" />
